# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  error-handling-isnt-all-about-errors.nodes.md  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20221128232109_seed_user.sql  20221211220937_create_newsletter_issues_table.sql
scripts/: init_db.sh  init_redis.sh  setenv.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_deliver_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  utils.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs
