[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Luca Palmieri <contact@palmieri.com>", "CJ Williams <cj@atmoscape.net>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.2"
once_cell = "1.16.0"
# env_logger = "0.9.1"
# log = "0.4.17"
reqwest = "0.11.12"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "~0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread" ] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }
