[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Luca Palmieri <contact@palmieri.com>", "CJ Williams <cj@atmoscape.net>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.2" # has yaml deserialization baked in
once_cell = "1.16.0"
# env_logger = "0.9.1"
# log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.0.0"
sqlx = { version = "~0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
# tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread" ] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.2.1", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
claim = "0.5.0"
wiremock = "0.5"
fake = { version = "~2.3" }
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.87"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
